Updated user schema with role then ready to deploy for testing
