# middleware/authMiddleware.js
@@ -1,0 +1,17 @@
+const jwt = require("jsonwebtoken");
+
+const authenticateJWT = (req, res, next) => {
+    const token = req.headers.authorization?.split(" ")[1];
+    if (!token) {
+        return res.status(401).json({ error: "Unauthorized, please log in" });
+    }
+    try {
+        const decoded = jwt.verify(token, process.env.JWT_SECRET);
+        req.user = decoded; // Attach user info to request object
+        next();
+    } catch (err) {
+        return res.status(403).json({ error: "Invalid token" });
+    }
+};
+
+module.exports = authenticateJWT;
